Casos de Uso 6-7

--- a/Requisitos/cu006.md
+++ b/Requisitos/cu006.md
@@ -22,6 +22,7 @@ Debe haber datos almacenados.
 
 **Postcondiciones:**
 
+* El sistema guarda la información en un fichero externo.
 * El sistema devuelve un mensaje con el resultado (positivo o negativo) del guardado.
 
 **Flujos alternativos:**
