--- a/Requisitos/cu007.md
+++ b/Requisitos/cu007.md
@@ -17,12 +17,13 @@ Debe existir un fichero con información almacenada.
 
 **Flujo principal:**
 
-1. El caso de uso empieza cuando el sistema necesita buscar un listado de alumnos.
-2. El sistema recoge los criterios del filtrado de búsqueda.
+1. El caso de uso empieza cuando el usuario solicita la carga de los datos.
+2. El sistema recoge las restricciones de formato.
 
 **Postcondiciones:**
 
-* El sistema devuelve el listado de alumnos coincidentes.
+* El sistema carga la copia de seguridad almacenada.
+* El sistema devuelve un mensaje con el resultado (positivo o negativo) de la carga.
 
 **Flujos alternativos:**
 
