Actualizacion de las restricciones de dominio de atributos

--- a/Requisitos/hu006.md
+++ b/Requisitos/hu006.md
@@ -1,7 +1,7 @@
 **(ANVERSO)**
 ---
 
-**ID:** 006 **Guardar copia de seguridad**
+**ID:** 006 **Guardar fichero**
 ---
 
 Como usuario me interesa poder guardar los datos almacenados independiente al sistema.
@@ -13,9 +13,8 @@ Como usuario me interesa poder guardar los datos almacenados independiente al si
 **(REVERSO)**
 ---
 
-* Quiero que la copia se guarde en un fichero externo.
-* Quiero que el fichero de guardado sea un fichero bianrio.
-* Como máximo podré almacenar 150 alumnos.
-* Quiero poder guardar un registro histórico.
+* Quiero poder guardar un registro histórico de los alumnos.
+* Quiero que la copia se guarde en un fichero binario externo.
+
 
 ---
