--- a/Requisitos/hu007.md
+++ b/Requisitos/hu007.md
@@ -1,7 +1,7 @@
 **(ANVERSO)**
 ---
 
-**ID:** 007 **Cargar copia de seguridad**
+**ID:** 007 **Cargar fichero**
 ---
 
 Como usuario me interesa poder cargar los datos desde un almacenamiento externo.
@@ -13,8 +13,7 @@ Como usuario me interesa poder cargar los datos desde un almacenamiento externo.
 **(REVERSO)**
 ---
 
-* Quiero que el fichero a cargar sea un fichero bianrio.
-* Quiero cargar un máximo de 150 alumnos.
-* Quiero poder cargar un registro histórico.
+* Quiero poder cargar un registro histórico de alumnos.
+* Quiero que el fichero a cargar sea un fichero binario.
 
 ---
